syntax = "proto3";

package authservice.user;

service UserService {
  rpc setUserType(SetUserTypeRequest) returns (EmptyResponse);
  rpc createUser(CreateUserParams) returns (EmptyResponse);
} 

message UserIdentifier {
  oneof identifier {
    int64 id = 1;
    string email = 2;
  }
}
message CreateUserParams {
  string email = 1;
  string name = 2;
  string password = 3;
  UserType type = 4;
}

enum UserType {
  SUPERADMIN = 0;
  ADMIN = 1;
  USER = 2;
}

message SetUserTypeRequest {
  UserIdentifier identifier = 1;
  UserType type = 2;
}

message EmptyResponse {}
